--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
-nix = "0.29.0"
+nix = { version = "0.29.0", features = ["fs", "mount", "sched"] }
